--- a/style.css
+++ b/style.css
@@ -1,25 +1,27 @@
 * {
     background: #363839;
     text-align: center;
-    font-family:Work Sans;
-    
+    font-family: Work Sans;
+
 }
+
 h5 {
     margin-top: 120px;
     color: #F46752;
 }
+
 h1 {
-    color:white;
+    color: white;
     margin-top: 26px;
     font-size: 44px;
     margin-bottom: 3px;
 }
+
 .title {
-    margin-left: 780px;
-    position:absolute;
-    text-align:center;
+    margin: 0 auto;
+    text-align: center;
     color: #ACB4BF;
-    font-size:19px;
+    font-size: 19px;
     height: 60px;
     width: 650px;
     line-height: 25px;
@@ -28,15 +30,17 @@ h1 {
 .one {
     background: none;
 }
+
 .get {
-    float:left;
-    margin-left:640px;
-    margin-top:100px;
+    float: left;
+
 }
+
 .anchor-one {
-    font-size:22px;
+    font-size: 22px;
     height: 22px;
 }
+
 .content-one {
     height: 78px;
     width: 234px;
@@ -44,33 +48,38 @@ h1 {
     font-size: 19px;
     line-height: 26px;
 }
+
 .apply {
-    float:left;
-    margin-left:100px;
-    margin-top:100px;
-   
+    float: left;
+
+
 }
+
 .anchor-two {
-    font-size:22px;
+    font-size: 22px;
     height: 22px;
 }
+
 .content-two {
     height: 52px;
     width: 234px;
     color: #ACB4BF;
     font-size: 18px;
     line-height: 26px;
+    padding-bottom: 50px;
 }
+
 .cover {
-    float:left;
-    margin-left:100px;
-    margin-top:100px;
+    float: left;
+
 }
+
 .anchor-three {
-    font-size:22px;
+    font-size: 22px;
     height: 22px;
-   
+
 }
+
 .content-three {
     height: 52px;
     width: 256px;
@@ -78,27 +87,53 @@ h1 {
     font-size: 20px;
     line-height: 22px;
 }
+
 span {
-    background-color: rgb(255, 81, 0);
-    color:white;
+    background-color: #F46752;
+    color: white;
     padding: 20px;
-    margin: 20px;
+    margin-top: 20px;
     border-radius: 3px;
-    
+
 }
+
 .button {
-    background: #F46752; 
+    background: #F46752;
 }
+
 .contain {
-    position: relative;;
-    
+    position: relative;
+    ;
+
 }
-.background-first,.background-second {
-    position: absolute;
+
+.container {
+    margin: 0 auto;
+    max-width: max-content;
+    margin-top: 73px;
 }
+
+.container:after {
+    content: " ";
+    display: block;
+    clear: both;
+}
+
 .background-first {
     z-index: 1;
 }
+
 .background-second {
     z-index: 2;
+}
+
+.col {
+    margin: 0 66px;
+}
+
+.apply .contain {
+    min-height: 60px;
+    background-image: url('./vibes/Rectangle.png'), url('./vibes/circle.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, 88px 15px;
 }
