--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     background: #363839;
     text-align: center;
-    font-family: Work Sans;
+    font-family: 'Work Sans', sans-serif
 
 }
 
@@ -47,12 +47,11 @@ h1 {
     color: #ACB4BF;
     font-size: 19px;
     line-height: 26px;
+    padding-bottom: 50px;
 }
 
 .apply {
     float: left;
-
-
 }
 
 .anchor-two {
@@ -86,6 +85,7 @@ h1 {
     color: #ACB4BF;
     font-size: 20px;
     line-height: 22px;
+    padding-bottom: 50px;
 }
 
 span {
@@ -103,8 +103,6 @@ span {
 
 .contain {
     position: relative;
-    ;
-
 }
 
 .container {
@@ -118,15 +116,6 @@ span {
     display: block;
     clear: both;
 }
-
-.background-first {
-    z-index: 1;
-}
-
-.background-second {
-    z-index: 2;
-}
-
 .col {
     margin: 0 66px;
 }
@@ -136,4 +125,17 @@ span {
     background-image: url('./vibes/Rectangle.png'), url('./vibes/circle.svg');
     background-repeat: no-repeat, no-repeat;
     background-position: center, 88px 15px;
+}
+.get .container {
+    min-height: 60px;
+    background-image: url('./vibes/Rectangle.png'), url('./vibes/circle.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, 88px 15px;
+}
+.background-first {
+    z-index: 1;	    
+}	
+
+.background-second {	
+    z-index: 2;
 }
