--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-* {
+body {
     background: #363839;
     text-align: center;
     font-family: 'Work Sans', sans-serif;
-    }
+  
+}
+
+.article {
+    line-height: 52px;
+    font-size: 44px;
+    font-weight: 500;
+    color:white;
+}
 
 h5 {
     margin-top: 120px;
     color: #F46752;
 }
 
-h1 {
-    color: white;
-    margin-top: 26px;
-    font-size: 44px;
-    margin-bottom: 3px;
-}
+
 
 .title {
     margin: 0 auto;
@@ -24,18 +27,16 @@ h1 {
     height: 60px;
     width: 650px;
     line-height: 25px;
+    margin-bottom: 50px;
 }
 
-;
 
-.get {
-    float: left;
 
-}
 
 .anchor-one {
     font-size: 22px;
     height: 22px;
+    color: white;
 }
 
 .content-one {
@@ -47,14 +48,12 @@ h1 {
     padding-bottom: 100px;
 }
 
-.apply {
-    float: left;
-    margin-left: 220px;
-}
+
 
 .anchor-two {
     font-size: 22px;
     height: 22px;
+    color: white;
 }
 
 .content-two {
@@ -66,14 +65,11 @@ h1 {
     padding-bottom: 100px;
 }
 
-.cover.col {
-    float: left;
-    margin-left: 220px;
-}
 
 .anchor-three {
     font-size: 22px;
     height: 22px;
+    color: white;
 }
 
 .content-three {
@@ -97,42 +93,61 @@ span {
 .button {
     background: #F46752;
 }
+.confetti {
+    float: left;
+}
 
-.contain {
-    position: relative;
+.first-column,
+.second-column,
+.third-column {
+    float:left;
+    margin:0 66px;
+   
 }
 
 .container {
-    margin-left: 600px;
     max-width: max-content;
     margin-top: 73px;
-    float: left;
+    margin: 0 auto;
+   
 }
 
 .container:after {
     content: " ";
     display: block;
     clear: both;
-}
-.col {
-    margin: 0 66px;
+    
 }
 
-.apply .contain  {
+.get.col {
+    min-height: 60px;
+    background-image: url('./vibes/Rectangle.svg'), url('./vibes/circle.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, 117px 22px;
+}
+.apply.col {
     min-height: 60px;
     background-image: url('./vibes/Rectangle.png'), url('./vibes/circle.svg');
     background-repeat: no-repeat, no-repeat;
     background-position: center, 88px 15px;
+
 }
- .container .get.col {
-    min-height: 60px;
-    background-image: url('./vibes/Rectangle.svg'), url('./vibes/circle.svg');
-    background-repeat: no-repeat, no-repeat;
-    background-position: center, 55px 22px;
-}
-.contained .cover.col {
+ 
+ .cover.col {
     min-height: 60px;
     background-image: url('./vibes/3.svg'), url('./vibes/circle.svg');
     background-repeat: no-repeat, no-repeat;
-    background-position: center, 88px 22px;
+    background-position: center, 108px 11px;
+    
 }
+.container {
+    background-image: url('./vibes/Path17.svg');
+    background-repeat:no-repeat, no-repeat;
+    background-position:right 200px bottom 260px;
+}
+body {
+    background-image: url('./vibes/confetti.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position:right 560px bottom 220px;
+}
+
